Opened 17 years ago

Closed 16 years ago

#1530 closed bug (fixed)

Nvidia GeForce FX 6600 doesn't work

Reported by: marcusoverhagen Owned by: rudolfc
Priority: normal Milestone: R1
Component: Drivers/Graphics/nVidia Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

When booting with a NVIDIA GeForce FX 6600 PCIe card (id 0x0141), attached to a DVI TFT screen HP LP2465, only a black screen with a dotted pinc vertical line is shown.

Change History (14)

comment:1 by stippi, 17 years ago

Milestone: R1/alphaR1

Moved to regular R1 milestone, I think it should not hold up R1/alpha, since there are many more devices not supported.

comment:2 by axeld, 17 years ago

Milestone: R1R1/alpha

R1/alpha doesn't need to support this device, it just should fall back to VESA instead of showing a dotted pink vertical line :-)

comment:3 by axeld, 17 years ago

Does anyone have this card, but does not suffer from this problem? If no one speaks up, we will just disable support for this specific ID.

comment:4 by axeld, 17 years ago

Milestone: R1/alphaR1

Temporarily fixed by removing the card's ID in hrev23579. Moved to R1 milestone, again.

comment:5 by aldeck, 17 years ago

Black screen with a 7600 GO (laptop) here. We might want to exclude it too.

0x0398, /* Nvidia GeForce 7600 GO */

I'll test in the next days with a GeForce FX 6600 GT AGP (0x00f1)

comment:6 by rudolfc, 16 years ago

yep, speaking up! I have this card here today: it actually works fine, on both a VGA screen and a DVI connected screen. I will re-enable this ID if no-one speaks up...

There are some things you should know (as a user): -if a DVI connected screen doesn't work, try it the analog way. If an analog screen doesn't work on one port, try the other one. Even if that would mean using a DVI->VGA adapter.

Anyhow, I saw that I can't get an VGA screen to work on the DVI connector due to false connector detection there (missing hardware spec, also mentioned in the driver's html docs I think)

Also EDID channel doesn't work for this card on the DVI connector (but that's not actually used for now). This also applies for G72 (GF7300LE tested) BTW..

Greetings,

Rudolf.

comment:7 by rudolfc, 16 years ago

Hi again,

For completeness, I am posting the 'malfunctioning' monitor's relevant specs here:

HP LP2465

Display, Maximum Pixel Rate

202 MHz (VGA input), 162 MHz (DVI input)

Horizontal scan rates

Horizontal Frequency: 30-94 kHz (VGA input), 30 to 92 KHz (DVI input); Vertical Frequency: 48-85 Hz (VGA and DVI input)

Display resolution

1920 x 1200 @ 60 Hz (analog and digital)

Video input connector

Two DVI-I (VGA analog and digital) inputs

Input signal

VGA to DVI-I, DVI-D to DVI-D, cables included

Seeing the resolution, probably a dual-link DVI cable is needed to display the panel's native resolution over DVI.

Bye!

Rudolf.

comment:8 by stippi, 16 years ago

In theory yes, 1920x1200 would require a dual link cable, but in practice, this resolution is supported by single link connections anyways. I don't remember exactly what, but "something" is reduced to make this possible.

comment:9 by umccullough, 16 years ago

And I even run 1920x1200 via analog VGA through a KVM switch using a multitude of various machines ;)

comment:10 by marcusoverhagen, 16 years ago

Umccullough please don't make unrelevant bullshit comments.

Rudolf I replaced the card with a ATI X300 inbetween, but I still have it somewhere and can probably run a test at the weekend. The resolution of 1920x1200 does indeed only need a single link cable as both card and TFT support reduced blanking.

The setup was working well with Linux and Windows.

comment:11 by axeld, 16 years ago

Hey Marcus, behave yourself! Even if VGA has little to do with DVI, no need for insults.

comment:12 by rudolfc, 16 years ago

Hi guys!

Glad to hear that Marcus! I would be curious to the results. For isntance:

  • Would the driver nowadays 'just work'for your setup?
  • would the driver work if you tell Haiku to use another resolution via the VESA call by the kernel during boot-up (iconscreen), like use 16 bit instead of 32, use say 1024x768x18 instead of the default resolution.
  • What resolution is used by haiku as default during bootup?
  • I'd love to see a full logfile from the driver (have nvidia.settings in the home folder and enable 'full logging', reboot and grab resulting logfile from home folder.
  • Would your monitor work using the VGA connection?
  • Could you send me a photo of what your screen looks like when trouble arises?

Shall I re-enable the card already? I mean, it's indeed working OK. Apparantly it's the combination of your screen and the driver that causes the trouble. Maybe specifically because of the high resolution..

Things might go wrong because the card BIOS sets a lower than native modeline for your card, and if you instruct the driver to do above that: it won't work. And maybe, because haiku now switches the card during bootup, it's now set to the native modeline and might just work OK as a sideeffect of that.

As you see: lots of questions from my part :-)

If you find some time to do at least some tests, that would be helpfull.

So let me know if I should re-enable the card, or someone else just do it :-)

Bye!

Rudolf.

comment:13 by rudolfc, 16 years ago

Status: newassigned

I re-enabled this card. It's working OK over here. If I don't hear otherwise, I'll close this ticket sometime.

Thanks :)

Bye!

Rudolf.

comment:14 by rudolfc, 16 years ago

Resolution: fixed
Status: assignedclosed

Closing for now.

Rudolf.

Note: See TracTickets for help on using tickets.