* Deactivated the IDs for the 8xxx chips - they are not supported. * Removed ID 0x0141 for the FX 6600 as well until it's fixed, see ticket #1530   for details.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23579 a95241bf-73f2-0310-859d-f6bbb57e9c96